<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.sharif.periodtracker.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home"
        android:label="@string/title_home"
        />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="edu.sharif.periodtracker.ui.calendar.CalendarFragment"
        tools:layout="@layout/fragment_calendar"
        android:label="@string/title_calendar"
        />
    <fragment
        android:id="@+id/navigation_add"
        android:name="edu.sharif.periodtracker.ui.add.AddFragment"
        tools:layout="@layout/fragment_add"
        android:label="@string/title_add"
        />

    <fragment
        android:id="@+id/navigation_report"
        android:name="edu.sharif.periodtracker.ui.report.ReportFragment"
        tools:layout="@layout/fragment_report"
        android:label="@string/title_report"
        />
    <fragment
        android:id="@+id/navigation_content"
        android:name="edu.sharif.periodtracker.ui.content.ContentFragment"
        tools:layout="@layout/fragment_content"
        android:label="@string/title_content"
        />
</navigation>