<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    >
    <RelativeLayout
        android:id="@+id/tool1_container"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/tool1"
            android:layout_width="@dimen/image_size_medium"
            android:layout_height="@dimen/image_size_medium"
            android:padding="5dp"
            android:src="@drawable/pad"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/tool_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tool1"
            android:text="@string/tool1"
            android:layout_centerHorizontal="true"
            android:textColor="#000000" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/tool2_container"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/tool2"
            android:layout_width="@dimen/image_size_medium"
            android:layout_height="@dimen/image_size_medium"
            android:padding="5dp"
            android:src="@drawable/tampon"
            android:layout_centerHorizontal="true"

            />

        <TextView
            android:id="@+id/tool_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tool2"
            android:layout_below="@+id/tool2"
            android:layout_centerHorizontal="true"

            android:textColor="#000000" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/tool3_container"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/tool3"
            android:layout_width="@dimen/image_size_medium"
            android:layout_height="@dimen/image_size_medium"
            android:padding="5dp"
            android:src="@drawable/cup"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/tool_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tool3"
            android:text="@string/tool3"
            android:layout_centerHorizontal="true"
            android:textColor="#000000" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/tool4"
            android:layout_width="@dimen/image_size_medium"
            android:layout_height="@dimen/image_size_medium"
            android:padding="5dp"
            android:src="@drawable/panty_liner"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/tool_text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tool4"
            android:layout_below="@+id/tool4"
            android:layout_centerHorizontal="true"
            android:textColor="#000000" />
    </RelativeLayout>

</LinearLayout>